[gd_scene load_steps=12 format=3 uid="uid://m8syw50abt0x"]

[ext_resource type="Script" path="res://entities/enemy/enemy.gd" id="1_b6iua"]
[ext_resource type="Texture2D" uid="uid://bffcq21bytkrk" path="res://entities/assets/Damage_effect_sheet.png" id="3_07hgk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uwp7m"]
atlas = ExtResource("3_07hgk")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7p6r"]
atlas = ExtResource("3_07hgk")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_suvbf"]
atlas = ExtResource("3_07hgk")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_71oo4"]
atlas = ExtResource("3_07hgk")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nil1q"]
atlas = ExtResource("3_07hgk")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qqwn"]
atlas = ExtResource("3_07hgk")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_ahcig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwp7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7p6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suvbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71oo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nil1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qqwn")
}],
"loop": true,
"name": &"activated",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pu7qs"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_armlm"]
radius = 35.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_b6iua")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="AttackEffect" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(-202.5, 102.5)
rotation = -2.26603
scale = Vector2(0.6, 0.561)
sprite_frames = SubResource("SpriteFrames_ahcig")
animation = &"activated"
autoplay = "activated"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2(-5, 2)
scale = Vector2(7.33708, 6.77195)
shape = SubResource("CircleShape2D_pu7qs")

[node name="PerceptionArea" type="Area2D" parent="."]
scale = Vector2(5.01799, 5.04184)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptionArea"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_armlm")

[node name="HitBoxArea" type="Area2D" parent="."]
scale = Vector2(1.5, 1.5)
collision_layer = 0

[node name="HitBox" type="CollisionShape2D" parent="HitBoxArea"]
position = Vector2(-5, 2)
scale = Vector2(7.33708, 6.77195)
shape = SubResource("CircleShape2D_pu7qs")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(150, 0)
collision_mask = 8

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-150, 0)
collision_mask = 0

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -75)
collision_mask = 8

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 75)
collision_mask = 8

[connection signal="area_entered" from="PerceptionArea" to="." method="_on_perception_area_area_entered"]
[connection signal="area_exited" from="PerceptionArea" to="." method="_on_perception_area_area_exited"]
[connection signal="body_entered" from="PerceptionArea" to="." method="_on_perception_area_body_entered"]
[connection signal="body_exited" from="PerceptionArea" to="." method="_on_perception_area_body_exited"]
[connection signal="body_entered" from="HitBoxArea" to="." method="_on_hit_box_area_body_entered"]
[connection signal="body_exited" from="HitBoxArea" to="." method="_on_hit_box_area_body_exited"]
